# auto_ur

./: README.md  package.xml  plans.md  setup.cfg  setup.py
autoUR/: autoUR.py
autoUR/config/: __init__.py  config_loader.py
autoUR/core/: __init__.py
autoUR/nodes/: __init__.py  demo_plan_only.py
autoUR/primitives/: __init__.py  arm_motion.py
autoUR/registry/: __init__.py  action_registry.py  default_actions.py
autoUR/skills/: __init__.py  pick_place_demo.py
auto_ur/: auto_ur.py  world_model.py
auto_ur/config/: __init__.py  config_loader.py
auto_ur/core/: __init__.py  action_result.py  action_spec.py  failures.py
auto_ur/nodes/: __init__.py  demo_plan_only.py  fake_joint_state_publisher.py  floor_marker_publisher.py  grasp_object_marker.py  gripper_object_demo.py  gripper_object_playback.py  hardware_execution_demo.py  trajectory_playback.py
auto_ur/primitives/: __init__.py  arm_motion.py  execution.py  gripper.py  perception.py  robot_motion.py
auto_ur/registry/: __init__.py  action_registry.py  default_actions.py
auto_ur/skills/: __init__.py  base.py  gripper_object_demo.py  pick_object.py  pick_place_demo.py  place_object.py
config/demos/: ur10e_plan_only_demo.yaml
config/end_effectors/: robotiq_2f_85.yaml
config/moveit/: hardware_moveit_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_py.yaml  ompl_planning.yaml  ur10e.srdf
config/poses/: named_cartesian_poses.yaml  named_joint_states_ur10e.yaml
config/robots/: ur10e.yaml
config/rviz/: demo_plan_only.rviz  gripper_object_demo.rviz
config/safety/: default_motion_limits.yaml  supervised_hardware_motion_limits.yaml
docs/: architecture.md  demo_ur10e_plan_only.md
launch/: demo_plan_only.launch.py  gripper_object_demo.launch.py  hardware_execution_demo.launch.py
test/: test_action_library_contracts.py  test_moveit_first_demo.py
urdf/: ur10e_robotiq_2f_85.urdf.xacro
