<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_ur</name>
  <version>0.0.0</version>
  <description>MoveItPy-first UR10e plan-only demo package</description>
  <maintainer email="celing-24-04@todo.todo">celing-24-04</maintainer>
  <license>TODO: License declaration</license>

  <depend>ament_index_python</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_py</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>python3-yaml</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>robotiq_description</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>ur_description</depend>
  <depend>xacro</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
